@@ -85,93 +85,64 @@ Applications</a></b></font></td></tr></table></center>
 <img src="graphics/glade_logo.gif" border="0" width="410" height="126" alt="GLADE Logo">
 </center>				
 <center><hr></center>
-<p><font face="Arial,helvetica,geneva,sans-serif,lucida">
-Tools needed to build C code generated by Glade:</p>
+
+<h2>Programming Languages Links</h2>
+
+<p>Note that even if a language doesn't appear here it may have support for
+GTK+ and libglade. You can check for a GTK+ binding on the
+<a href="http://www.gtk.org/bindings.html">GTK+ Language Bindings Page</a>.
+
 <ul>
-<LI><a name="autoconf"><A HREF="ftp://ftp.gnu.org/pub/gnu/autoconf">autoconf</A>:
-Creates the configure script to support portability of the project.
-<a href="ftp://rawhide.redhat.com/pub/rawhide/i386/RedHat/RPMS/">(RedHat i386 RPM)</a>
+
+<LI>C - Glade can generate C code itself.
+The <a href="http://www.daa.com.au/~james/gnome/">libglade</a> library is
+also available. It creates the user interface at runtime by loading the XML
+files generated by Glade.
+For large projects, libglade is the preferred method, since it has
+proved to be more easily scalable.
+<BR><BR></li>
+
+<lI>C++ - the <a href="http://www.gtkmm.org/">Gtkmm</a> C++ bindings for GTK+
+include support for libglade.
+Alternatively <a href="http://home.wtal.de/petig/">Glade--</a> can be used
+to generate C++ code.<BR><BR></li>
+
+<li>Python - the <a href="http://www.pygtk.org/">PyGtk</a> python bindings for
+GTK+ include support for libglade.<BR><BR></li>
+
+<LI>Ada - the <A HREF="http://libre.act-europe.fr/GtkAda/">GtkAda</A>
+bindings for GTK+ includes support for generating Ada code.
 <br><br></LI>
 
-<LI><a name="automake"><a href="ftp://ftp.gnu.org/pub/gnu/automake">automake</a>:
-Creates standard Makefiles to help build the project.
-<a href="ftp://rawhide.redhat.com/pub/rawhide/i386/RedHat/RPMS/">(RedHat i386 RPM)</a>
-<BR><BR></li>
+<LI>Pike - the <A HREF="http://pike.ida.liu.se/">Pike</A> binding for GTK+
+includes support for libglade in the GTK.GladeXML class.<br><br></LI>
+
+<li>Perl - the <a href="http://www.gtkperl.org/">Gtk-Perl</a> bindings
+include support for libglade.
+Alternatively
+<a href="http://www.glade-perl.connectfree.co.uk/index.html">
+Glade-Perl</a> can generate Perl code.
+<br><br></li>
+
+<li>Eiffel - <a href="http://www.lfix.co.uk/eiflib/index.html#eglade">
+eGlade</a> generates Eiffel code.<BR><BR></li>
+
+<li>Ruby - there are
+<a href="http://www.ruby-lang.org/en/raa-list.rhtml?name=Ruby%2FLibGlade">
+Ruby bindings for libglade</a>..<BR><BR></li>
+
 </ul>
 
-<p><font face="Arial,helvetica,geneva,sans-serif,lucida">
-Here is a list of related software:</p>
+<h2>General Links</h2>
+
 <ul>
-
-<LI><a href="http://www.daa.com.au/~james/gnome/">libglade</a>:
-loads the XML files and creates the user interfaces dynamically.<BR><BR></li>
-
-<lI><a href="http://home.wtal.de/petig/">
-Glade--</a>: converts Glade output to C++
-for use with the Gtk-- bindings.
-(There is also
-<a href="http://www.geocities.com/SiliconValley/Bit/8083/gladecc.htm">
-gladecc</a> which produces a different style of C++ output.)<BR><BR></li>
-
-<LI><A HREF="http://ada.eu.org/gtkada/">GtkAda</A>: Ada95 binding for GTK+, which includes support for Glade.<br><br></LI>
-
-<LI><A HREF="http://pike-community.org/sites/pigtk/">PiGTK</A>: Pike binding
-for GTK+, which includes support for libglade.<br><br></LI>
-
-<li>PyGtk: python bindings for GTK which include
-some support for loading Glade XML files
-at runtime.
-A <a href="http://glc.sourceforge.net/">python source code
-generator</a> is also being developed.
-<BR><BR></li>
-
-<li><a href="http://freespace.virgin.net/dermot.musgrove/computers/perl/">
-Perl Support</a>: Perl modules to generate Perl source code and to create
-interfaces from the XML dynamically. (If you have problems with that URL try
-<a href="http://www.glade.perl.connectfree.co.uk/index.html">here</a>.)
-The Perl modules are also available on
-<A HREF="ftp://sunsite.doc.ic.ac.uk/packages/CPAN/modules/by-module/Glade/">
-CPAN</A>.
-<br><br></li>
-
-<li><a href="http://perlcomposer.sourceforge.net">PerlComposer</a>: 
-an IDE for perl/Gtk. It comes with GUI builder, editor and class viewer.
-In addition to its builtin interface builder it can import XML forms generated
-by Glade by using libglade.
-<br><br></li>
-
-<li><a href="http://www.landsharklinux.com/">SnapperPerl</a>:
-an XML based application compiler and thin client. The compiler
-incorporates Glade XML, Perl scripts, and object extensions into a single XML
-file. The thin client provides a high level API and runs the application from
-the XML file.
-<BR><BR></li>
-
-<li><a href="http://www.lfix.co.uk/eiflib/index.html#eglade">eGlade</a>:
-Eiffel code generator.<BR><BR></li>
-
-<li>Common Lisp: There are 2 generators, one for the open source CMUCL and
-Clisp implementations, available
-<a href="http://home.sol.no/~espejohn/">here</a>,
-and another for the non-free Allegro Common Lisp platform, available
-<a href="http://www.cs.uit.no/~frodef/sw/cl-glade/">here</a>.
-<BR><BR></li>
-
-<li><a href="http://www.ruby-lang.org/en/raa-list.rhtml?name=Ruby%2FLibGlade">
-Ruby bindings for libglade</a>. See also the <a href = "http://ruby-lang.org">
-Ruby home page</a>.<BR><BR></li>
-
 
 <li><a href="http://anjuta.sourceforge.net/">Anjuta</a>:
 an Integrated Development Environment for GTK+ and GNOME.
 <BR><BR></li>
 
-
-
-
 </ul>
 
-</font>							
 </td>
 </tr>
 <tr valign="bottom">
