@@ -87,13 +87,8 @@ Applications</a></b></font></td></tr></table></center>
 <center><hr></center>
 <p><font face="Arial,helvetica,geneva,sans-serif,lucida">
 
-There are three mailing lists for Glade:
+There are two mailing lists for Glade:
 <UL>
-<LI><a href="mailto:glade-announce@ximian.com">
-glade-announce@ximian.com</a>
-- A moderated list for announcements of new versions of Glade and other
-closely-related tools, such as libglade and the various code generators.
-<BR><BR>
 <LI><a href="mailto:glade-users@ximian.com">glade-users@ximian.com</a>
 - For discussions about using Glade to build applications.<BR><BR>
 <LI><a href="mailto:glade-devel@ximian.com">glade-devel@ximian.com</a>
@@ -101,8 +96,6 @@ closely-related tools, such as libglade and the various code generators.
 </UL>					
 <P>
 To subscribe, unsubscribe, or view the archives of the lists go to the
-<a href="http://lists.ximian.com/mailman/listinfo/glade-announce">
-glade-announce</a>,
 <a href="http://lists.ximian.com/mailman/listinfo/glade-users">
 glade-users</a> or
 <a href="http://lists.ximian.com/mailman/listinfo/glade-devel">
@@ -110,21 +103,12 @@ glade-devel</a>
 mailman web pages.
 <p>
 Alternatively you can use email to perform commands by mailing
-<a href="mailto:glade-announce-request@ximian.com">
-glade-announce-request@ximian.com</a>,
 <a href="mailto:glade-users-request@ximian.com">
 glade-users-request@ximian.com</a> or
 <a href="mailto:glade-devel-request@ximian.com">
 glade-devel-request@ximian.com</a>,
 with commands such as 'subscribe' and 'help' in the subject line or
 the message body.
-<br><br>
-<P>
-An archive of the old glade-devel list, up to Aug 31 2000, can be found at:
-<UL>
-<LI><a href="http://rpmfind.net/tools/glade/messages/">
-http://rpmfind.net/tools/glade/messages/</a>
-</UL>
 <br><br>
 There is also a mailing list for the C++ code generator here:
 <UL>
