@@ -1,3 +1,10 @@
+2004-04-14  Damon Chaplin  <damon@gnome.org>
+
+	* links.html: checked all the links and tidied up.
+
+	* lists.html: removed references to glade-announce. We don't use it
+	any more.
+
 2004-04-12  Damon Chaplin  <damon@gnome.org>
 
 	* index.html: fixed date.
